--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rust To-Do List</title>
+    <script src="https://unpkg.com/htmx.org@2.0.0"
+        integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <Form id="todoform" action="/" target="_self" method="post">
-        <Label for="tditem">To-Do Item:</Label><br>
-        <Input type="text" name="tditem"></Input>
-        <Button type="submit" form="todoform" value="Submit">Submit</Button>
-    </Form>
-    <ul>
-        {% for item in items %}
-        <li>{{ item.item }}</li>
-        {% endfor %}
-    </ul>
+    <form hx-post="/submit" hx-target="ul" hx-swap="outerHTML">
+        <label for="tditem">To-Do Item:</label><br>
+        <input type="text" name="tditem"></Input>
+        <button type="submit">Submit</button>
+    </form>
+    {% include "list.html" %}
 </body>
 
 </html>
